--- a/apps/elysia/package.json
+++ b/apps/elysia/package.json
@@ -12,6 +12,7 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.4.1",
     "elysia": "^1.4.0"
   },
   "devDependencies": {
