--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,1 +1,5 @@
+# Elysia API URL
 VITE_API_URL=localhost:3001
+
+# Convex deployment URL (get this from Convex dashboard after running `bun run dev:convex`)
+VITE_CONVEX_URL=
