--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   ],
   "scripts": {
     "setup": "./scripts/setup.sh",
+    "choose-backend": "./scripts/choose-backend.sh",
     "kill-ports": "./scripts/kill-dev-ports.sh",
     "dev:test": "bun run --filter @repo/web dev & bun run --filter @repo/elysia dev",
     "dev": "concurrently --kill-others-on-fail --names 'WEB,CONVEX,ELYSIA' --prefix-colors 'blue,magenta,yellow' 'bun run dev:web' 'bun run dev:convex' 'bun run dev:elysia'",
