--- a/package.json
+++ b/package.json
@@ -16,11 +16,8 @@
   ],
   "scripts": {
     "setup": "./scripts/setup.sh",
-    "choose-backend": "./scripts/choose-backend.sh",
     "kill-ports": "./scripts/kill-dev-ports.sh",
-    "dev:test": "bun run --filter @repo/web dev & bun run --filter @repo/elysia dev",
-    "dev": "concurrently --kill-others-on-fail --names 'WEB,CONVEX,ELYSIA' --prefix-colors 'blue,magenta,yellow' 'bun run dev:web' 'bun run dev:convex' 'bun run dev:elysia'",
-    "dev:elysia": "bun run --filter @repo/elysia dev",
+    "dev": "concurrently --kill-others-on-fail --names 'WEB,CONVEX' --prefix-colors 'blue,magenta' 'bun run dev:web' 'bun run dev:convex'",
     "dev:web": "bun run --filter @repo/web dev",
     "dev:convex": "bun run --filter @repo/convex dev",
     "build:web": "bun run --filter @repo/web build",
