--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -21,8 +21,7 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     "paths": {
-      "@/*": ["./src/*"],
-      "@repo/elysia": ["../elysia/src/index.ts"]
+      "@/*": ["./src/*"]
     }
   }
 }
