--- a/packages/convex/package.json
+++ b/packages/convex/package.json
@@ -24,7 +24,8 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
-    "convex": "catalog:"
+    "convex": "catalog:",
+    "openai": "^6.17.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
