--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "convex": "catalog:",
     "lucide-react": "^0.563.0",
+    "radix-ui": "^1.4.3",
     "react": "catalog:",
     "react-dom": "catalog:",
     "react-markdown": "^10.1.0",
